[styles] Fix text overflow in cells

--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,7 @@
     display: flex;
     height: 100%;
     align-items: center;
+    overflow: auto;
 }
 
 .rgt-cell-inner {
